# FSN

./: CMakeLists.txt
.github/workflows/: cmake-single-platform.yml
libs/: CMakeLists.txt
libs/fns-lang/: CMakeLists.txt
libs/fns-lang/inc/: fns-lang.h
libs/fns-lang/src/: fns-lang.cpp
libs/fns-lang/test/: fns-lang_test.cpp
libs/tree-sitter-fsn/: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
libs/tree-sitter-fsn/bindings/c/: tree-sitter-fsn.pc.in
libs/tree-sitter-fsn/bindings/go/: binding.go  binding_test.go
libs/tree-sitter-fsn/bindings/node/: binding.cc  index.js
libs/tree-sitter-fsn/bindings/python/tests/: test_binding.py
libs/tree-sitter-fsn/bindings/python/tree_sitter_fsn/: __init__.py  binding.c
libs/tree-sitter-fsn/bindings/rust/: build.rs  lib.rs
libs/tree-sitter-fsn/bindings/swift/TreeSitterFSN/: fsn.h
libs/tree-sitter-fsn/bindings/swift/TreeSitterFSNTests/: TreeSitterFSNTests.swift
libs/tree-sitter-fsn/src/: grammar.json  node-types.json  parser.c
libs/tree-sitter-fsn/test/corpus/: enum.txt  interface.txt  struct.txt
