[package]
name = "tree-sitter-fsn"
description = "A Simple Networking Framework"
version = "0.1.0"
authors = ["Callum Antoni Moore <Callum@cantonim.me>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "fsn"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/cantonim/fsn"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.6"
